<resources>
    <string name="app_name">MiguelasNews</string>
    <string name="abrir">abrir</string>
    <string name="fechar">fechar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="imagem_logo_miguelas_news">logo_miguelas</string>
    <string name="titulo_noticia">Levando a informação correta, onde você estiver!</string>
    <string name="icon_image">Icone para author da noticia</string>
    <string name="autor_noticia">Fabiano Lira</string>
    <string name="data_noticia">data da noticia recente</string>
    <string name="voltar">Voltar</string>
    <string name="_12_09_2020">12/09/2020</string>
    <string name="imagem_data">logo imagem da data</string>
    <string name="imagens_noticias">Imagens do corpo da noticia</string>
    <string name="imagem_splash">Imagem abertura app</string>
    <string name="email">fabianolira@outlook.com</string>
    <string name="imagem_menu">Imagem do menu principal</string>
    <string name="autor">Por:</string>
    <string name="bordao_miguelasNews">Levando a informação correta, onde você estiver!</string>
    <string name="autor_noticia_adapter">Fabiano da Silva Lira</string>
    <string name="data_adapter">12/10/2019</string>
    <string name="categoria">CATEGORIA</string>

    <string name="admob_appid">ca-app-pub-9648448994507096~5409892205</string>
    <string name="admob_banner">ca-app-pub-9648448994507096/7377579992</string>
    <string name="testeadmob">ca-app-pub-3940256099942544/6300978111</string>

    <string name="titulo">miguelasNews levando a informação correta até você! onde você estiver, sempre!</string>
    <string name="titulo_categoria">CORONAVIRUS</string>
    <string name="titulo_da_noticia">miguelasNews levando a informação correta até você! onde você estiver, sempre!</string>
    <string name="data">23/12/2020</string>
    <string name="imagem">Imagem</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Fazer login</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite o seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="respnder_notiricacao">Responder</string>
    <string name="todo_todo">TODO</string>
    <string name="dica_de_noticia" />
    <string name="enviar_dica_de_noticia">Enviar dica de noticia</string>
    <string name="descreva_a_noticia">Descreva a noticia</string>
    <string name="titulo_dica_noticia">Titulo</string>
    <string name="imagens_dica">Imagens:</string>
    <string name="todo_dica_imagem">dica Imagem</string>
    <string name="todo_image">imagem</string>
    <string name="imagem_01" />
    <string name="link_da_noticia">link da noticia</string>
    <string name="link_para_a_not_cia_original">Link para a notícia original.</string>
    <string name="bolsonaro_pede_na_tv_volta_normalidade_e_fim_do_confinamento_em_massa_e_diz_que_meios_de_comunica_o_espalharam_pavor">Bolsonaro pede na TV \'volta à normalidade\' e fim do \'confinamento em massa\' e diz que meios de comunicação espalharam \'pavor\'</string>
    <string name="vers_o_1_0">Versão 1.0</string>
    <string name="email_fabianolira_outlook_com">Email: fabianolira@outlook.com</string>
    <string name="todos_os_direitos_reservados">Todos os direitos reservados</string>
    <string name="todo">TODO</string>
    <string name="_86_9_9999_9999">(86) 9.9999-9999</string>
    <string name="_86_9_9999_99999">(86) 9.9999-9999</string>


</resources>
