<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/gradiente_background"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/fundo_app"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/logoHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/titulo_noticia"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:paddingTop="6dp"
            android:textColor="#ffffff"
            android:text="@string/email"/>

    </LinearLayout>

</LinearLayout>