<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardnator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EFEF"
    tools:context=".activity.NoticiasDetalhesActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ColalapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbarCollapse">

            <ImageView
                android:id="@+id/imagemPrincipal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:contentDescription="@android:string/selectAll"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logonews" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNoticiasDetalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorPrimary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            tools:context="com.fabianolira.miguelasnews.Activity.DetalhesActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTituloDetalhes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/titulo_noticia"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="start">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:contentDescription="@string/icon_image"
                            app:srcCompat="@drawable/ic_autor_24dp"
                            tools:ignore="VectorDrawableCompat" />

                        <TextView
                            android:id="@+id/textAutor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="27dp"
                            android:layout_marginLeft="27dp"
                            android:layout_marginBottom="6dp"
                            android:text="@string/autor_noticia"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="start">


                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/data_noticia"
                            tools:srcCompat="@drawable/ic_action_calendar_month" />


                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="26dp"
                            android:layout_marginLeft="0dp"
                            android:layout_marginBottom="0dp"
                            android:layout_toEndOf="@id/imageView"
                            android:layout_toRightOf="@id/imageView"
                            android:contentDescription="@string/imagem_data"
                            app:srcCompat="@drawable/ic_action_calendar_month" />

                        <TextView
                            android:id="@+id/textDataDetalheso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="-2dp"
                            android:layout_marginLeft="-2dp"
                            android:layout_marginBottom="5dp"
                            android:layout_toEndOf="@id/imageView2"
                            android:layout_toRightOf="@id/imageView2"
                            android:text="@string/_12_09_2020"
                            android:textSize="12sp" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/webDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingBottom="16dp"
                    android:text=""
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/link_para_a_not_cia_original"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/urlNoticia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="linkNoticia"
                    android:paddingBottom="16dp"
                    android:text="@string/link_da_noticia"
                    android:textColor="#6C98E1"
                    android:textSize="12sp" />

                <!-- <WebView
                    android:id="@+id/webDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp" />-->

            </LinearLayout>


            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewImagensDetalhes"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     android:layout_marginTop="16dp" />
             </LinearLayout>-->

            <TextView
                android:id="@+id/voltar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="70dp"
                android:gravity="center_horizontal"
                android:onClick="voltar"
                android:text="@string/voltar"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorito_branco_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit"></com.google.android.gms.ads.AdView>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>